--- a/PUA-201410/cohete_2014/cohete.cmp
+++ b/PUA-201410/cohete_2014/cohete.cmp
@@ -1,4 +1,4 @@
-Cmp-Mod V01 Created by CvPcb (2013-07-07 BZR 4022)-stable date = 31/05/2014 11:42:52 p. m.
+Cmp-Mod V01 Created by CvPcb (2013-07-07 BZR 4022)-stable date = 03/06/2014 3:37:58 p. m.
 
 BeginCmp
 TimeStamp = /5389CE64;
@@ -113,10 +113,10 @@ IdModule  = PINHEAD1-2;
 EndCmp
 
 BeginCmp
-TimeStamp = /5389DA78;
+TimeStamp = /538E2F30;
 Reference = P2;
-ValeurCmp = CONN_4;
-IdModule  = PIN_ARRAY_4x1;
+ValeurCmp = CONN_6;
+IdModule  = PIN_ARRAY-6X1;
 EndCmp
 
 BeginCmp
@@ -186,6 +186,41 @@ BeginCmp
 TimeStamp = /53893C7B;
 Reference = R7;
 ValeurCmp = R;
+IdModule  = SM1206;
+EndCmp
+
+BeginCmp
+TimeStamp = /538E2EFB;
+Reference = R8;
+ValeurCmp = 1K;
+IdModule  = SM1206;
+EndCmp
+
+BeginCmp
+TimeStamp = /538E2F0A;
+Reference = R9;
+ValeurCmp = 1K;
+IdModule  = SM1206;
+EndCmp
+
+BeginCmp
+TimeStamp = /538E2F19;
+Reference = R10;
+ValeurCmp = 1K;
+IdModule  = SM1206;
+EndCmp
+
+BeginCmp
+TimeStamp = /538E2F59;
+Reference = R11;
+ValeurCmp = 1K;
+IdModule  = SM1206;
+EndCmp
+
+BeginCmp
+TimeStamp = /538E2F68;
+Reference = R12;
+ValeurCmp = 1K;
 IdModule  = SM1206;
 EndCmp
 
